[package]
name = "immaculate"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
secp256k1 = "0.22"
rand = "0.8"

# [[bin]]
# name = "send_blocks"
# path = "src/send_blocks.rs"

# [[bin]]
# name = "server"
# path = "src/server.rs"
